fix overflow issue

--- a/youtube-search-react/index.css
+++ b/youtube-search-react/index.css
@@ -2,7 +2,6 @@ html,body {
 	width:100%;
 	height:100vh;
 	margin:0px;
-	overflow: hidden;
 }
 
 .searchBar{
